--- a/Css/styles.css
+++ b/Css/styles.css
@@ -3,9 +3,9 @@ body {
     background-color: #d8ecec;
   }
   h1 {
-    color: #66bfbf;
+    color: #66BFBF;
    }
-   h3{
+   h3 {
    color: #66bfbf;
 
    }
